--- a/index.css
+++ b/index.css
@@ -2,11 +2,12 @@
     display:grid;
     /* flex-direction:row;
     flex-grow: initial; */
-    grid-template-columns: auto auto auto auto auto;
-} */
-h1{
+    /* grid-template-columns: auto auto auto auto auto; */
+/* } */ 
+/* h1{
     text-align:center
-}
+} */
+
 @media (min-width: 576px) { 
     #editableDiv{
         display:grid;
@@ -17,7 +18,7 @@ h1{
 @media (min-width: 768px) {
     #editableDiv{
         display:grid;
-        grid-template-columns:auto auto;
+        grid-template-columns:auto auto auto auto;
     }
 }
 @media (min-width: 992px) { 
