--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     text-align:center
 } */
 
-@media (min-width: 576px) { 
+/* @media (min-width: 576px) { 
     #editableDiv{
         display:grid;
         grid-template-columns:auto;
@@ -26,4 +26,4 @@
         display:grid;
         grid-template-columns:auto auto auto auto auto;
     }
-}
+} */
